# Keihi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-tester.md  code-reviewer.md  debugger.md  frontend-tester.md
.claude/commands/: create-pr.md
.claude/hooks/: pr_pre_check.py  pre_commit_lint.py
.github/workflows/: ci.yml
backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/api/: models.py  schema.py
backend/api/migrations/: 0001_initial.py  0002_receipt.py  0003_remove_expense_payment_method_paymentmethod_and_more.py
backend/api/tests/: test_models.py
backend/config/: .env.example  settings.py  urls.py
backend/tests/: conftest.py  test_example.py
frontend/: .env.example  .eslintrc.cjs  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js
frontend/pages/: index.vue
frontend/plugins/: apollo.ts
frontend/src/: App.vue  apollo.ts
frontend/src/__tests__/: example.spec.ts
frontend/src/components/: GraphQLTest.vue
frontend/tests/: example.spec.ts  example.test.js
frontend/tests/e2e/: example.spec.js
