[project]
name = "keihi-backend"
version = "0.1.0"
description = "経費管理アプリケーションのバックエンドAPI"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "strawberry-graphql-django>=0.47.0",
    "django-cors-headers>=4.3.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
